Added a sick loading bar

--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react-app": "^6.1.0",
     "prettier": "^1.19.1",
-    "react-axe": "^3.3.0"
+    "react-axe": "^3.3.0",
+    "workerize-loader": "^1.1.0"
   },
   "resolutions": {
     "serialize-javascript": "^2.1.1"
