fixed accessibility issue, and compiled typescript to es6 instead of es5

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,8 @@
     "browser": true,
     "jasmine": true,
     "jest": true,
-    "jest/globals": true
+    "jest/globals": true,
+    "serviceworker": true
   },
   "rules": {
     "prettier/prettier": [
