--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     ],
     "development": [
       "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 firefox version"
     ]
   },
   "jest": {
