--- a/now.json
+++ b/now.json
@@ -1,9 +1,5 @@
 {
-  "source": "/(.*)",
-  "headers" : [
-    {
-      "key" : "Cache-Control",
-      "value" : "public, max-age=300"
-    }
+  "routes": [
+    { "src": "/.*", "headers": {"cache-control": "s-maxage=300"}}
   ]
 }
