--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,9 +33,6 @@
     "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.39",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "lodash": "^4.17.15",
     "polished": "^3.4.2",
     "react": "^16.12.0",
@@ -43,6 +42,16 @@
     "typescript": "~3.7.2"
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^5.3.6",
+    "@storybook/addon-actions": "^5.3.6",
+    "@storybook/addon-links": "^5.3.6",
+    "@storybook/addon-viewport": "^5.3.6",
+    "@storybook/addons": "^5.3.6",
+    "@storybook/preset-create-react-app": "^1.5.2",
+    "@storybook/react": "^5.3.6",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/lodash": "^4.14.149",
     "@types/node": "^12.0.0",
@@ -56,6 +65,7 @@
     "eslint-plugin-react-app": "^6.1.0",
     "prettier": "^1.19.1",
     "react-axe": "^3.3.0",
+    "storybook": "^5.3.6",
     "workerize-loader": "^1.1.0"
   },
   "resolutions": {
